Added seller account

--- a/css/product_reviews.css
+++ b/css/product_reviews.css
@@ -131,13 +131,13 @@ body {
 .product h2 {
   font-size: 24px;
   font-weight: 600;
-  color: var(--crem);
+  color: var(--black);
   margin-top: 20px;
 }
 
 .product p {
   font-size: 16px;
-  color: var(--crem);
+  color: var(--black);
 }
 
 .product img {
